# CellWars

./: .gitignore  Build.bat  Build.sh  BuildPython.bat  CMakeLists.txt  README.md  docs-config.txt  setup.py
Python/: Game.py
misc/: config.txt
src/: Bot.cpp  Bot.h  Configuration.h  Direction.h  EnemyBot.cpp  EnemyBot.h  Field.cpp  Field.h  FieldList.cpp  FieldList.h  FieldListIterator.cpp  FieldListIterator.h  Grid.cpp  Grid.h  Main.cpp  PlayerBot.cpp  PlayerBot.h  Team.h  Vector.h  Window.cpp  Window.h  World.cpp  World.h  WorldSnapshot.cpp  WorldSnapshot.h
src/Bot/: Bot.cpp  Bot.h  EnemyBot.cpp  EnemyBot.h  Examples.h  PlayerBot.cpp  PlayerBot.h  Team.h  Utilities.cpp  Utilities.h
src/PythonBinding/: Binding.cpp  BindingBot.cpp  BindingUtilities.cpp  BindingWorld.cpp
src/Renderer/: Button.cpp  Button.h  SFMLWindow.cpp  SFMLWindow.h  Window.cpp  Window.h  WindowEvent.h
src/World/: Actions.h  Configuration.cpp  Configuration.h  ConfigurationLoader.cpp  ConfigurationLoader.h  Direction.h  Field.cpp  Field.h  FieldList.cpp  FieldList.h  FieldListIterator.h  Grid.cpp  Grid.h  Vector.cpp  Vector.h  World.cpp  World.h  WorldSnapshot.cpp  WorldSnapshot.h
